# book-now-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
booknow/: main.py
booknow/analysis/: coin_analyzer.py  indicators.py  safety.py
booknow/api/: __init__.py  app.py  deps.py  routes_binance.py  routes_config.py  routes_diag.py  routes_scalper.py  routes_trading.py  routes_wallet.py  state.py
booknow/binance/: balances.py  delist.py  dust.py  filters.py  klines_cache.py  rate_limit.py  rest_api.py  tickers_cache.py  user_data.py  ws_api.py  ws_streams.py
booknow/config/: settings.py  trading_config.py
booknow/processors/: base.py  fast_analyse.py  fast_move_filter.py  time_analyser.py  ulf_0_to_3.py
booknow/repository/: redis_client.py  redis_keys.py
booknow/rules/: base.py  rule_one.py  rule_three.py  rule_two.py
booknow/scalper/: __init__.py  config.py  dashboard.py  engine.py  order_flow.py  stream.py
booknow/sentiment/: supervisor.py  tasks.py
booknow/sentiment/scripts/: ALGORITHMS_GUIDE.md  README.md  (+41 more)
booknow/subsystems/: __init__.py  base_fetcher.py  fakeout_detector.py  futures_rest.py  meta_model.py  registry.py  risk_management.py  trend_alignment.py  volume_profile.py
booknow/trading/: executor.py  monitor.py  orphan_reconciler.py  signal_autobuy.py  state.py  trailing_tp.py  tsl.py  vsp_autobuy.py
booknow/util/: alerts.py  momentum.py  trade_archive.py
scripts/: SOAK.md  redis_inspect.py  signal_autobuy.sh  soak.sh  spot_movers.py
tests/: test_scalper_order_flow.py
(+66 files in other folders)
